--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
 	<title>HomePage</title>
 	<meta charset="UTF-8">
-	<meta name="format-detection" content="telephone=no">
+	<meta name="description" content="Example of front end website development">
 	<style>
 		body {
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20241104140129">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241104142500">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -715,7 +715,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241104140129"></script>
+	<script src="js/app.min.js?_v=20241104142500"></script>
 </body>
 
 </html>
