--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			opacity: 0;
 		}
 	</style>
-	<link rel="stylesheet" href="css/style.min.css?_v=20241104142500">
+	<link rel="stylesheet" href="css/style.min.css?_v=20241104143622">
 	<link rel="shortcut icon" href="favicon.ico">
 	<!-- <meta name="robots" content="noindex, nofollow"> -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -22,7 +22,7 @@
 			<div class="header__container">
 				<div class="header__logo"><span>Digi</span>ency</div>
 				<div class="header__menu menu">
-					<button type="button" class="menu__icon icon-menu"><span></span></button>
+					<button type="button" title="Menu" class="menu__icon icon-menu"><span></span></button>
 					<nav class="menu__body">
 						<ul class="menu__list">
 							<li class="menu__item"><a href="#" data-goto-top="30" data-goto=".page__hero" class="menu__link">Home</a></li>
@@ -34,20 +34,20 @@
 						</ul>
 					</nav>
 				</div>
-				<button class="header__switch"></button>
+				<button class="header__switch" title="Switcher-dark-light"></button>
 			</div>
 		</header>
 		<div class="sidebar">
-			<a href="#" class="sidebar__social-link social-link"><svg>
+			<a href="#" class="sidebar__social-link social-link" title="facebook"><svg>
 					<use xlink:href="img/icons/icons.svg#facebook"></use>
 				</svg></a>
-			<a href="#" class="sidebar__social-link social-link"><svg>
+			<a href="#" class="sidebar__social-link social-link" title="instagram"><svg>
 					<use xlink:href="img/icons/icons.svg#instagram"></use>
 				</svg></a>
-			<a href="#" class="sidebar__social-link social-link"><svg>
+			<a href="#" class="sidebar__social-link social-link" title="twitter"><svg>
 					<use xlink:href="img/icons/icons.svg#twitter"></use>
 				</svg></a>
-			<a href="#" class="sidebar__social-link social-link"><svg>
+			<a href="#" class="sidebar__social-link social-link" title="skype"><svg>
 					<use xlink:href="img/icons/icons.svg#skype"></use>
 				</svg></a>
 		</div>
@@ -166,16 +166,16 @@
 								<div class="team-slide__body">
 									<div class="team-slide__image"><img data-src="img/team/person1.webp" alt="Person"></div>
 									<div class="team-slide__sidebar">
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="facebook"><svg>
 												<use xlink:href="img/icons/icons.svg#facebook"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="instagram"><svg>
 												<use xlink:href="img/icons/icons.svg#instagram"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="twitter"><svg>
 												<use xlink:href="img/icons/icons.svg#twitter"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="skype"><svg>
 												<use xlink:href="img/icons/icons.svg#skype"></use>
 											</svg></a>
 									</div>
@@ -189,16 +189,16 @@
 								<div class="team-slide__body">
 									<div class="team-slide__image"><img data-src="img/team/person2.webp" alt="Person"></div>
 									<div class="team-slide__sidebar">
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="facebook"><svg>
 												<use xlink:href="img/icons/icons.svg#facebook"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="instagram"><svg>
 												<use xlink:href="img/icons/icons.svg#instagram"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="twitter"><svg>
 												<use xlink:href="img/icons/icons.svg#twitter"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="skype"><svg>
 												<use xlink:href="img/icons/icons.svg#skype"></use>
 											</svg></a>
 									</div>
@@ -212,16 +212,16 @@
 								<div class="team-slide__body">
 									<div class="team-slide__image"><img data-src="img/team/person3.webp" alt="Person"></div>
 									<div class="team-slide__sidebar">
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="facebook"><svg>
 												<use xlink:href="img/icons/icons.svg#facebook"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="instagram"><svg>
 												<use xlink:href="img/icons/icons.svg#instagram"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="twitter"><svg>
 												<use xlink:href="img/icons/icons.svg#twitter"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="skype"><svg>
 												<use xlink:href="img/icons/icons.svg#skype"></use>
 											</svg></a>
 									</div>
@@ -235,16 +235,16 @@
 								<div class="team-slide__body">
 									<div class="team-slide__image"><img data-src="img/team/person4.webp" alt="Person"></div>
 									<div class="team-slide__sidebar">
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="facebook"><svg>
 												<use xlink:href="img/icons/icons.svg#facebook"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="instagram"><svg>
 												<use xlink:href="img/icons/icons.svg#instagram"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="twitter"><svg>
 												<use xlink:href="img/icons/icons.svg#twitter"></use>
 											</svg></a>
-										<a href="#" class="team-slide__social-link social-link"><svg>
+										<a href="#" class="team-slide__social-link social-link" title="skype"><svg>
 												<use xlink:href="img/icons/icons.svg#skype"></use>
 											</svg></a>
 									</div>
@@ -629,7 +629,7 @@
 						</div>
 					</div>
 					<div data-watch class="contact__map">
-						<iframe data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50606.39691513776!2d-122.35682956071014!3d37.55742428518691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f9e60efa95545%3A0xfd8efcf42dcc1ba7!2z0KHQsNC9LdCc0LDRgtC10L4sINCa0LDQu9GW0YTQvtGA0L3RltGPLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1730632401354!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+						<iframe title="google-map" data-src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d50606.39691513776!2d-122.35682956071014!3d37.55742428518691!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808f9e60efa95545%3A0xfd8efcf42dcc1ba7!2z0KHQsNC9LdCc0LDRgtC10L4sINCa0LDQu9GW0YTQvtGA0L3RltGPLCDQodC_0L7Qu9GD0YfQtdC90ZYg0KjRgtCw0YLQuCDQkNC80LXRgNC40LrQuA!5e0!3m2!1suk!2sua!4v1730632401354!5m2!1suk!2sua" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 					</div>
 					<div data-watch class="contact__brend">
 						<div class="contact__brend-image"><img data-src="img/contact/icon-brend1.svg" alt="Brend-logo"></div>
@@ -650,16 +650,16 @@
 								Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sit a laoreet libero dis eget maecenas bibendum.
 							</p>
 							<div class="footer__social">
-								<a href="#" class="footer__social-link social-link"><svg>
+								<a href="#" class="footer__social-link social-link" title="facebook"><svg>
 										<use xlink:href="img/icons/icons.svg#facebook"></use>
 									</svg></a>
-								<a href="#" class="footer__social-link social-link"><svg>
+								<a href="#" class="footer__social-link social-link" title="instagram"><svg>
 										<use xlink:href="img/icons/icons.svg#instagram"></use>
 									</svg></a>
-								<a href="#" class="footer__social-link social-link"><svg>
+								<a href="#" class="footer__social-link social-link" title="twitter"><svg>
 										<use xlink:href="img/icons/icons.svg#twitter"></use>
 									</svg></a>
-								<a href="#" class="footer__social-link social-link"><svg>
+								<a href="#" class="footer__social-link social-link" title="skype"><svg>
 										<use xlink:href="img/icons/icons.svg#skype"></use>
 									</svg></a>
 							</div>
@@ -695,7 +695,7 @@
 							</p>
 							<form action="files/sendmail/sendmail.php" method="POST">
 								<input type="email" name="form[email]" data-error="Error" required placeholder="info@gmail.com" class="footer__input">
-								<button type="submit" class="footer__button"><svg>
+								<button type="submit" title="Submit-email" class="footer__button"><svg>
 										<use xlink:href="img/icons/icons.svg#send-plane"></use>
 									</svg></button>
 							</form>
@@ -715,7 +715,7 @@
 			</div>
 		</footer>
 	</div>
-	<script src="js/app.min.js?_v=20241104142500"></script>
+	<script src="js/app.min.js?_v=20241104143622"></script>
 </body>
 
 </html>
